--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header'); -%>
 <header>
   <div class="smoothie">
-    <img src="'/library.jpg" alt="">
+    <img src="../public/library.jpg" alt="library">
   </div>
   <div class="headings">
     <h2>Books library </h2>
